test/fail/mixins/NestedSystem.mo
import SystemMixin "System";

mixin <system>() {
  include SystemMixin<system>();
}
